2002-02-21  Clint Adams  <clint@zsh.org>

	* 16689: Etc/.distfiles, Etc/TODO: list some things to do.

	* 16688: Doc/Zsh/params.yo: clarify the pseudo-randomness of
	RANDOM.

2002-02-20  Bart Schaefer  <schaefer@zsh.org>

	* unposted: Completion/Unix/Command/_pine: Fix sed expression to
	correctly extract option names from ~/.pinerc file.

2002-02-20  Wayne Davison  <wayned@users.sourceforge.net>

	* 16678: Src/hist.c: Yet another fix for prepnexthistent().

2002-02-20  Oliver Kiddle  <opk@zsh.org>

	* 16619, 16676: Src/builtin.c, Doc/Zsh/builtins.yo,
	Completion/Zsh/Command/_dirs, Completion/Unix/Type/_directories:
	add -c, -l and -p options to the dirs builtin for bash compatibility

2002-02-19  Clint Adams  <clint@zsh.org>

	* 16673: zshconfig.ac, Doc/Zsh/.distfiles, Doc/Zsh/mod_langinfo.yo,
	Src/Modules/.distfiles, Src/Modules/langinfo.c,
	Src/Modules/langinfo.mdd: add langinfo module as an interface
	to locale information.

2002-02-19  Geoff Wing  <gcw@zsh.org>

	* 16635: Src/Zle/zle_refresh.c: make sure we display lists in
	singlelinezle mode

	* unposted: Doc/Zsh/metafaq.yo: update distribution sites - remove one
	site (France), add one (Netherlands)

2002-02-18  Wayne Davison  <wayned@users.sourceforge.net>

	* 16672: Src/hist.c: Fixed a just-introduced bug in prepnexthistent()
	that made it work wrong when "curline" was in the history list.

2002-02-18  Sven Wischnowsky  <wischnow@zsh.org>

	* 16669: Doc/Zsh/compsys.yo, Src/Zle/computil.c: allow an
	argument containing only a single colon as a separator between
	options to _arguments and specs

	* 16668: Src/Zle/compcore.c: fix group handling nothing should
	now possibly be added to the wrong group again

	* 16667: Completion/Base/Utility/_arguments: fix test for
	prefix-needed

2002-02-17  Clint Adams  <clint@zsh.org>

	* 16662: Completion/Unix/Command/_cdcd: use parameter expansion
	instead of grep, sed, and seq.

2002-02-16  Wayne Davison  <wayned@users.sourceforge.net>
